# FilmGenX

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  validate_supervisor.py
backend/app/: __init__.py  prompts.py
backend/app/agents/: __init__.py  supervisor_agents.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/memory/: __init__.py  factory.py  taxonomy.py
backend/app/models/: __init__.py  asset.py  character.py  conversation.py  location.py  memory_entry.py  memory_extract_cursor.py  memory_profile.py  project.py  prompt.py  scene.py  shot.py  shot_group.py  skill.py  storyboard.py  supervisor_event.py  supervisor_workflow.py  supervisor_workflow_node.py  task.py  user.py  workspace.py
backend/app/repositories/: __init__.py  asset.py  base.py  character.py  conversation.py  location.py  project.py  scene.py  shot.py  shot_group.py  skill.py  storyboard.py  supervisor_workflow.py  task.py  user.py  workspace.py
backend/app/schemas/: __init__.py  asset.py  auth.py  base.py  character.py  conversation.py  location.py  project.py  scene.py  shot.py  shot_group.py  skill.py  storyboard.py  task.py  workspace.py
backend/app/services/: __init__.py  skill_parser.py  skill_references.py  skill_service.py  supervisor_workflow_service.py
backend/scripts/: __init__.py  agent_cli.py  docker-backend.sh  seed_skills.py
backend/tests/: __init__.py
(+337 files in other folders)
