[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "google-genai>=1.70.0",
    "httpx[socks]>=0.28.1",
    "oss2>=2.19.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.42.0",
]
